gpio added cloud skeleton added